syntax = "proto3";

package opsAgent.model.v1;

option go_package = "pkg/proto/pbgo"; // golang


message HostnameRequest {}

message HostnameReply {
    string hostname = 1;
}

message ExecTaskRequest {
    string name = 1;
    string cmd = 2;
}

message ExecTaskReply {
    string name = 1;
    string cmd = 3;
    string result = 4;
    string error = 5;
}

message WriteFileRequest {
    string filename = 1;
    string filepath = 2;
    string content = 3;
}

message WriteFilesRequest {
    repeated WriteFileRequest files = 1;
}

message WriteFileReply {
    string filename = 1;
    string error = 2;
    string result = 3;
    int32 code = 4;
}

message WriteFilesReply {
    repeated WriteFileReply wfRes = 1;
}